--- a/Clash/config/ACL4SSR_WithChinaIp_WithGFW_chatGPT.ini
+++ b/Clash/config/ACL4SSR_WithChinaIp_WithGFW_chatGPT.ini
@@ -10,7 +10,7 @@
 ;增强国外GFW：支持
 
 ruleset=🎯 全球直连,rules/ACL4SSR/Clash/LocalAreaNetwork.list
-ruleset=📢 GPT名单,rules/ACL4SSR/Clash/ChatGPT.list
+ruleset=📢 GPT名单,https://raw.githubusercontent.com/bigsml/ACL4SSR/master/Clash/ChatGPT.list
 ruleset=🛑 全球拦截,rules/ACL4SSR/Clash/BanAD.list
 ruleset=🍃 应用净化,rules/ACL4SSR/Clash/BanProgramAD.list
 ruleset=🎯 全球直连,rules/ACL4SSR/Clash/GoogleCN.list
