--- a/Clash/config/ACL4SSR_WithChinaIp_WithGFW_chatGPT.ini
+++ b/Clash/config/ACL4SSR_WithChinaIp_WithGFW_chatGPT.ini
@@ -27,7 +27,7 @@ ruleset=🎯 全球直连,rules/ACL4SSR/Clash/ChinaCompanyIp.list
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`♻️ 自动HK`[]DIRECT`(HK|SG|US|JP)
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]♻️ 自动HK`[]DIRECT`(HK|SG|US|JP)
 custom_proxy_group=♻️ 自动选择`url-test`(-(1|2)x-.*(HK|SG|US))`http://www.gstatic.com/generate_204`3000,,50
 custom_proxy_group=♻️ 自动HK`url-test`(-(1|2)x-.*(HK))`http://www.gstatic.com/generate_204`3000,,50
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连
