增加 github 的选择，解决自动HK 的时候有些节点无法同步代码的问题

--- a/Clash/config/ACL4SSR_WithChinaIp_WithGFW_chatGPT.ini
+++ b/Clash/config/ACL4SSR_WithChinaIp_WithGFW_chatGPT.ini
@@ -11,6 +11,7 @@
 
 ruleset=🎯 全球直连,rules/ACL4SSR/Clash/LocalAreaNetwork.list
 ruleset=📢 GPT名单,https://raw.githubusercontent.com/bigsml/ACL4SSR/master/Clash/ChatGPT.list
+ruleset=📢 Github,https://raw.githubusercontent.com/bigsml/ACL4SSR/master/Clash/Github.list
 ruleset=🛑 全球拦截,rules/ACL4SSR/Clash/BanAD.list
 ruleset=🍃 应用净化,rules/ACL4SSR/Clash/BanProgramAD.list
 ruleset=🎯 全球直连,rules/ACL4SSR/Clash/GoogleCN.list
@@ -37,6 +38,7 @@ custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 custom_proxy_group=📢 GPT名单`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|SG)
+custom_proxy_group=📢 Github`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|SG|HK)
 
 enable_rule_generator=true
 overwrite_original_rules=true
