--- a/Clash/config/ACL4SSR_WithChinaIp_WithGFW_chatGPT.ini
+++ b/Clash/config/ACL4SSR_WithChinaIp_WithGFW_chatGPT.ini
@@ -12,8 +12,8 @@
 ruleset=🎯 全球直连,rules/ACL4SSR/Clash/LocalAreaNetwork.list
 ruleset=📢 GPT名单,https://raw.githubusercontent.com/bigsml/ACL4SSR/master/Clash/ChatGPT.list
 ruleset=📢 Github,https://raw.githubusercontent.com/bigsml/ACL4SSR/master/Clash/Github.list
-ruleset=🛑 全球拦截,rules/ACL4SSR/Clash/BanAD.list
-ruleset=🍃 应用净化,rules/ACL4SSR/Clash/BanProgramAD.list
+ruleset=🛑 全球拦截,https://raw.githubusercontent.com/bigsml/ACL4SSR/master/Clash/BanAD.list
+ruleset=🍃 应用净化,https://raw.githubusercontent.com/bigsml/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=🎯 全球直连,rules/ACL4SSR/Clash/GoogleCN.list
 ruleset=🎯 全球直连,rules/ACL4SSR/Clash/Ruleset/SteamCN.list
 ruleset=🎯 全球直连,rules/ACL4SSR/Clash/Microsoft.list
